--- a/photos.css
+++ b/photos.css
@@ -9,8 +9,8 @@ body{
 }
 
 
-.container-fluid {
-    padding: 0;
+.wrapper {
+    width: 100vw;
 }
 .site-header {
     background-color: #7498D1;
@@ -76,21 +76,34 @@ nav ul li a:hover{
     color:rgb(228, 238, 255);
 }
 
+.card {
+    margin: 1em 0;
+    padding: 0;
+}
+
+.cardHolder {
+    margin: 0;
+    padding: 0;
+}
+
+.cardWidth {
+    margin: 1em;
+}
 .pic {
     width: 100%;
 }
 
-h1 {
+.photoTitle {
     text-align: center;
     font-family: roboto;
     color:  #262B53;
-    padding: 15px; 
+    padding: 30px 0 0; 
 }
 
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
   .row {
-      max-width: 50%;
+      max-width: 100%;
   }
 }
 
